--- a/ABRBetweenCodecsSpike/Base.lproj/Main.storyboard
+++ b/ABRBetweenCodecsSpike/Base.lproj/Main.storyboard
@@ -4,13 +4,12 @@
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Root View Controller-->
+        <!--It's loud!-->
         <scene sceneID="b5R-wv-fuU">
             <objects>
                 <tableViewController id="Wfl-TW-G3T" customClass="ViewController" sceneMemberID="viewController">
@@ -131,7 +130,7 @@
                             <outlet property="delegate" destination="Wfl-TW-G3T" id="WvZ-LT-3LD"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Root View Controller" id="nDI-rG-39P"/>
+                    <navigationItem key="navigationItem" title="It's loud!" id="nDI-rG-39P"/>
                     <connections>
                         <outlet property="_bitrateSelectionSegmentControl" destination="fDm-X2-gyZ" id="j19-Bi-PCy"/>
                         <outlet property="_indicatedBitrateLabel" destination="3RV-hi-dca" id="Adl-Jn-4N8"/>
