--- a/ABRBetweenCodecsSpike/Base.lproj/Main.storyboard
+++ b/ABRBetweenCodecsSpike/Base.lproj/Main.storyboard
@@ -13,15 +13,36 @@
         <scene sceneID="b5R-wv-fuU">
             <objects>
                 <tableViewController id="Wfl-TW-G3T" customClass="ViewController" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="grouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" id="Msj-gb-HdI">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="grouped" separatorStyle="default" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" id="Msj-gb-HdI">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                         <sections>
+                            <tableViewSection headerTitle="PLAYLIST" id="chy-fy-EzR">
+                                <cells>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" textLabel="pto-l0-tVJ" style="IBUITableViewCellStyleDefault" id="41e-05-FFK">
+                                        <rect key="frame" x="0.0" y="55.5" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="41e-05-FFK" id="EDg-Wr-dic">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="pto-l0-tVJ">
+                                                    <rect key="frame" x="16" y="0.0" width="343" height="43.5"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </cells>
+                            </tableViewSection>
                             <tableViewSection headerTitle="VARIANT CAPPING BITRATE" id="fRm-AH-7el">
                                 <cells>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="bEI-gO-3Sj">
-                                        <rect key="frame" x="0.0" y="55.5" width="375" height="44"/>
+                                        <rect key="frame" x="0.0" y="155.5" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="bEI-gO-3Sj" id="S3v-wG-x1q">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
@@ -51,7 +72,7 @@
                             <tableViewSection headerTitle="BITRATES" id="bQP-3z-FRQ">
                                 <cells>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" textLabel="e4S-cU-xkf" detailTextLabel="3RV-hi-dca" style="IBUITableViewCellStyleValue2" id="bHh-Zb-cJj">
-                                        <rect key="frame" x="0.0" y="155.5" width="375" height="44"/>
+                                        <rect key="frame" x="0.0" y="255.5" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="bHh-Zb-cJj" id="p6t-g8-aiH">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
@@ -75,7 +96,7 @@
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" textLabel="GlB-qV-DhN" detailTextLabel="rFr-RM-afK" style="IBUITableViewCellStyleValue2" id="dKq-PC-3B7">
-                                        <rect key="frame" x="0.0" y="199.5" width="375" height="44"/>
+                                        <rect key="frame" x="0.0" y="299.5" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="dKq-PC-3B7" id="IQj-GJ-eln">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
@@ -99,7 +120,7 @@
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" textLabel="6pI-Dj-gMk" detailTextLabel="58C-aa-K6i" style="IBUITableViewCellStyleValue2" id="ERX-tT-SLd">
-                                        <rect key="frame" x="0.0" y="243.5" width="375" height="44"/>
+                                        <rect key="frame" x="0.0" y="343.5" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="ERX-tT-SLd" id="gWz-ta-adR">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
@@ -130,9 +151,16 @@
                             <outlet property="delegate" destination="Wfl-TW-G3T" id="WvZ-LT-3LD"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="It's loud!" id="nDI-rG-39P"/>
+                    <navigationItem key="navigationItem" title="It's loud!" id="nDI-rG-39P">
+                        <barButtonItem key="rightBarButtonItem" title="Change Item" style="plain" id="Rmf-lT-RBO">
+                            <connections>
+                                <segue destination="CXr-bP-emg" kind="presentation" modalPresentationStyle="formSheet" id="RpG-05-6VH"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="_bitrateSelectionSegmentControl" destination="fDm-X2-gyZ" id="j19-Bi-PCy"/>
+                        <outlet property="_currentPlaylistLabel" destination="pto-l0-tVJ" id="v77-7P-xSB"/>
                         <outlet property="_indicatedBitrateLabel" destination="3RV-hi-dca" id="Adl-Jn-4N8"/>
                         <outlet property="_observedBitrateLabel" destination="rFr-RM-afK" id="aOX-6O-lVp"/>
                         <outlet property="_switchBitrateLabel" destination="58C-aa-K6i" id="HSc-t8-FnU"/>
@@ -141,6 +169,87 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Vtg-Qn-Us7" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="226" y="41"/>
+        </scene>
+        <!--Change Item-->
+        <scene sceneID="W4O-hP-KgL">
+            <objects>
+                <tableViewController id="mdj-ux-235" customClass="ChooseItemTableViewController" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="grouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" id="u6w-iN-ef9">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                        <sections>
+                            <tableViewSection headerTitle="PLAYLIST URL" id="NAI-OL-kHG">
+                                <cells>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="7SX-Xt-3Kb">
+                                        <rect key="frame" x="0.0" y="55.5" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="7SX-Xt-3Kb" id="XTI-ue-rzC">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Playlist URL" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="lMe-67-o7e">
+                                                    <rect key="frame" x="16" y="0.0" width="343" height="43.5"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="43.5" id="xQj-0J-Acx"/>
+                                                    </constraints>
+                                                    <nil key="textColor"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <textInputTraits key="textInputTraits" autocorrectionType="no" keyboardType="URL" returnKeyType="done"/>
+                                                </textField>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="bottom" secondItem="lMe-67-o7e" secondAttribute="bottom" id="TwR-NT-OVX"/>
+                                                <constraint firstItem="lMe-67-o7e" firstAttribute="leading" secondItem="XTI-ue-rzC" secondAttribute="leadingMargin" id="UVR-rz-Ln2"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="lMe-67-o7e" secondAttribute="trailing" id="oZn-yx-MWx"/>
+                                                <constraint firstItem="lMe-67-o7e" firstAttribute="top" secondItem="XTI-ue-rzC" secondAttribute="top" id="xXt-wR-exz"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </cells>
+                            </tableViewSection>
+                        </sections>
+                        <connections>
+                            <outlet property="dataSource" destination="mdj-ux-235" id="q5r-Yq-xU0"/>
+                            <outlet property="delegate" destination="mdj-ux-235" id="M92-RD-xMD"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Change Item" id="pir-Yk-oHi">
+                        <barButtonItem key="leftBarButtonItem" style="plain" systemItem="cancel" id="0c0-R4-uXa">
+                            <connections>
+                                <segue destination="7p9-DS-lje" kind="unwind" unwindAction="unwindFromSelectItemSegue:" id="Hik-3Q-9ZT"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" style="done" systemItem="done" id="upz-iJ-Suc">
+                            <connections>
+                                <segue destination="7p9-DS-lje" kind="unwind" unwindAction="unwindFromSelectItemViewControllerWithSelectedURLSegue:" id="6fr-WJ-K3Y"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="_playlistURLTextField" destination="lMe-67-o7e" id="dAS-6R-skh"/>
+                    </connections>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ciQ-74-Zrc" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="7p9-DS-lje" userLabel="Exit" sceneMemberID="exit"/>
+            </objects>
+            <point key="canvasLocation" x="2145" y="41"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="Mpk-JM-jKO">
+            <objects>
+                <navigationController id="CXr-bP-emg" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="sDx-Z8-VDN">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="mdj-ux-235" kind="relationship" relationship="rootViewController" id="Ugo-xL-YgC"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="D4G-Pb-QYY" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1193" y="41"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="tHS-EQ-NaK">
