Add a few buttons to make selecting some stations easier

--- a/ABRBetweenCodecsSpike/Base.lproj/Main.storyboard
+++ b/ABRBetweenCodecsSpike/Base.lproj/Main.storyboard
@@ -149,7 +149,7 @@
         <scene sceneID="W4O-hP-KgL">
             <objects>
                 <tableViewController id="mdj-ux-235" customClass="ChooseItemTableViewController" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="grouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" id="u6w-iN-ef9">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="grouped" separatorStyle="default" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" id="u6w-iN-ef9">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
@@ -178,6 +178,125 @@
                                                 <constraint firstItem="lMe-67-o7e" firstAttribute="leading" secondItem="XTI-ue-rzC" secondAttribute="leadingMargin" id="UVR-rz-Ln2"/>
                                                 <constraint firstAttribute="trailingMargin" secondItem="lMe-67-o7e" secondAttribute="trailing" id="oZn-yx-MWx"/>
                                                 <constraint firstItem="lMe-67-o7e" firstAttribute="top" secondItem="XTI-ue-rzC" secondAttribute="top" id="xXt-wR-exz"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </cells>
+                            </tableViewSection>
+                            <tableViewSection headerTitle="PREDEFINED PLAYLISTS" id="1HZ-Nf-Prv">
+                                <cells>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="g3O-kS-b2l">
+                                        <rect key="frame" x="0.0" y="155.5" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="g3O-kS-b2l" id="6VA-db-6pK">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="huj-Ny-ssV">
+                                                    <rect key="frame" x="16" y="11" width="343" height="22"/>
+                                                    <state key="normal" title="Radio One"/>
+                                                    <connections>
+                                                        <action selector="radioButtonTapped:" destination="mdj-ux-235" eventType="touchUpInside" id="va0-FW-6Io"/>
+                                                    </connections>
+                                                </button>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="trailingMargin" secondItem="huj-Ny-ssV" secondAttribute="trailing" id="JcG-mM-fd7"/>
+                                                <constraint firstItem="huj-Ny-ssV" firstAttribute="top" secondItem="6VA-db-6pK" secondAttribute="topMargin" id="jry-RU-mGg"/>
+                                                <constraint firstItem="huj-Ny-ssV" firstAttribute="leading" secondItem="6VA-db-6pK" secondAttribute="leadingMargin" id="k47-e7-dQb"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="huj-Ny-ssV" secondAttribute="bottom" id="sMq-cs-Got"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="SJ4-wz-UX9">
+                                        <rect key="frame" x="0.0" y="199.5" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="SJ4-wz-UX9" id="Zvj-b8-0dY">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YSw-oe-iZZ">
+                                                    <rect key="frame" x="16" y="11" width="343" height="22"/>
+                                                    <state key="normal" title="Radio Two"/>
+                                                    <connections>
+                                                        <action selector="radioButtonTapped:" destination="mdj-ux-235" eventType="touchUpInside" id="gEZ-bO-twn"/>
+                                                    </connections>
+                                                </button>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="YSw-oe-iZZ" firstAttribute="leading" secondItem="Zvj-b8-0dY" secondAttribute="leadingMargin" id="asn-ke-dpv"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="YSw-oe-iZZ" secondAttribute="trailing" id="eYd-WQ-NJn"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="YSw-oe-iZZ" secondAttribute="bottom" id="mir-DQ-91b"/>
+                                                <constraint firstItem="YSw-oe-iZZ" firstAttribute="top" secondItem="Zvj-b8-0dY" secondAttribute="topMargin" id="tnQ-pz-bFd"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="Tq8-IR-yop">
+                                        <rect key="frame" x="0.0" y="243.5" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Tq8-IR-yop" id="GyW-Ze-5QA">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wpS-Mj-hnA">
+                                                    <rect key="frame" x="16" y="11" width="343" height="22"/>
+                                                    <state key="normal" title="Radio Three"/>
+                                                    <connections>
+                                                        <action selector="radioButtonTapped:" destination="mdj-ux-235" eventType="touchUpInside" id="gn3-my-4lE"/>
+                                                    </connections>
+                                                </button>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="wpS-Mj-hnA" firstAttribute="leading" secondItem="GyW-Ze-5QA" secondAttribute="leadingMargin" id="Ic9-xr-iIz"/>
+                                                <constraint firstItem="wpS-Mj-hnA" firstAttribute="top" secondItem="GyW-Ze-5QA" secondAttribute="topMargin" id="Rkp-d9-2Y5"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="wpS-Mj-hnA" secondAttribute="trailing" id="mlF-s5-Xlg"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="wpS-Mj-hnA" secondAttribute="bottom" id="roP-s1-c6E"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="4Zi-6d-eir">
+                                        <rect key="frame" x="0.0" y="287.5" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="4Zi-6d-eir" id="zru-Ra-546">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <button opaque="NO" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zl0-CQ-gg7">
+                                                    <rect key="frame" x="16" y="11" width="343" height="22"/>
+                                                    <state key="normal" title="Radio Four"/>
+                                                    <connections>
+                                                        <action selector="radioButtonTapped:" destination="mdj-ux-235" eventType="touchUpInside" id="j3q-hb-Y3f"/>
+                                                    </connections>
+                                                </button>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="zl0-CQ-gg7" firstAttribute="top" secondItem="zru-Ra-546" secondAttribute="topMargin" id="9Xh-9j-6nz"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="zl0-CQ-gg7" secondAttribute="bottom" id="EOu-QY-eNR"/>
+                                                <constraint firstItem="zl0-CQ-gg7" firstAttribute="leading" secondItem="zru-Ra-546" secondAttribute="leadingMargin" id="IIB-0B-oPp"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="zl0-CQ-gg7" secondAttribute="trailing" id="wSU-i7-T1z"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="dxd-Qc-QAP">
+                                        <rect key="frame" x="0.0" y="331.5" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="dxd-Qc-QAP" id="wEb-6f-w2H">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <button opaque="NO" tag="4" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dUD-Zv-MNQ">
+                                                    <rect key="frame" x="16" y="11" width="343" height="22"/>
+                                                    <state key="normal" title="Five Live"/>
+                                                    <connections>
+                                                        <action selector="radioButtonTapped:" destination="mdj-ux-235" eventType="touchUpInside" id="ec1-0I-69y"/>
+                                                    </connections>
+                                                </button>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="bottomMargin" secondItem="dUD-Zv-MNQ" secondAttribute="bottom" id="ADe-39-suX"/>
+                                                <constraint firstItem="dUD-Zv-MNQ" firstAttribute="leading" secondItem="wEb-6f-w2H" secondAttribute="leadingMargin" id="Lub-Zd-p1h"/>
+                                                <constraint firstItem="dUD-Zv-MNQ" firstAttribute="top" secondItem="wEb-6f-w2H" secondAttribute="topMargin" id="hLp-Ak-43D"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="dUD-Zv-MNQ" secondAttribute="trailing" id="jXc-vm-jgF"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
